syntax = "proto3";

package calculator;
option go_package = "calculator_pb";

message Sum{
    int32 a = 1;
    int32 b = 2;
}

message SumRequest{
    Sum sum = 1;
}

message SumResponse{
    int32 result = 1;
}

message FibonacciRequest{
    int32 num = 1;
}

message FibonacciResponse{
    int32 resultNum = 1;
}

message MeanRequest{
    int64 number = 1;
}

message MeanResponse{
    int64 mean = 1;
}

service CalculatorService {
    rpc SumService(SumRequest) returns (SumResponse){};
    rpc FibonacciService(FibonacciRequest) returns (stream FibonacciResponse){};
    rpc MeanService(stream MeanRequest) returns (MeanResponse){};
}